fix: use radial blur behind custom logos, too
- custom logos can have more space

--- a/app/stylus/layout.styl
+++ b/app/stylus/layout.styl
@@ -116,8 +116,15 @@ body.waiting
   img
     display none
 .logo.custom-logo
+  top 5px
   &:before
-    display none
+    content ''
+    left -13px
+    top -12px
+    width 380px
+    height 80px
+    position absolute
+    background radial-gradient(ellipse closest-side at 37% 45%, rgba(255,255,255,.7) 30%, rgba(255,255,255,0) 100%)
   a
     filter none
     display inline-block
